Fix front page on mobile

--- a/wp-content/themes/ethnologist/style.css
+++ b/wp-content/themes/ethnologist/style.css
@@ -123,3 +123,31 @@
 .fb-like {
 	margin-top: 20px;
 }
+@media only screen and (max-width: 1200px) {
+	.ethnologist-hometitle-with-search-form:after {
+		margin-left: 250px;
+	}
+}
+@media only screen and (max-width: 990px) {
+	.home-page-title {
+		font-weight: bold;
+		font-size: 40px;
+		line-height: 40px;
+		text-transform: uppercase;
+	}
+	.ethnologist-hometitle-with-search-form:after {
+		margin-left: 150px;
+	}
+}
+@media only screen and (max-width: 800px) {
+	.ethnologist-hometitle-with-search-form {
+		margin-left: 0;
+	}
+	.ethnologist-hometitle-with-search-form:after {
+		margin: 0 auto;
+	}
+	.ethnologist-front-page-search-form {
+		width: 250px;
+		float: none;
+	}
+}
